examples/test/testpolicy6027.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6027
  namespace: namespace233
spec:
  podSelector:
    matchLabels:
      key28: value39
      key3: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value26
      podSelector:
        matchLabels:
          key39: value25
          key8: value0
